dropshot/tests/fail/bad_trait_only4.stderr
error: API trait `MyApi` does not have associated type `Context`
       (this type specifies the shared context for endpoints)
 --> tests/fail/bad_trait_only4.rs:8:7
  |
8 | trait MyApi {}
  |       ^^^^^

error[E0425]: cannot find function `api_description` in module `my_api_mod`
  --> tests/fail/bad_trait_only4.rs:18:17
   |
18 |     my_api_mod::api_description::<MyImpl>();
   |                 ^^^^^^^^^^^^^^^ not found in `my_api_mod`

error[E0425]: cannot find function `stub_api_description` in module `my_api_mod`
  --> tests/fail/bad_trait_only4.rs:19:17
   |
19 |     my_api_mod::stub_api_description();
   |                 ^^^^^^^^^^^^^^^^^^^^ not found in `my_api_mod`
